
------

  Release 0.7.1

  o FEATURE: Navigation via residue triple.

  o FEATURE: csv mogul output parser.

  o CHANGE: Updated interface to JLigand

  o CHANGE: Sequence View improved.

  o CHANGE: Bond orders for Het-groups in CA+ligands mode.

  o CHANGE: Optional use of build-info at compile time.

  o BUG-FIX: Ligand fitting improved/fixed.

  o BUG-FIX: Drag and drop improved.

  o BUG-FIX: Fix up for reading of molprobity files.

  o BUG-FIX: Use Extended HM symbols when converting from clipper
    symmetry to mmdb symmetry.

  o BUG-FIX: Get Drug feature improved.

  o BUG-FIX: Better use of extant ring info when drawing rings in LIDIA.

  o BUG-FIX: Scale factor for sharpening fixed [Chang Liu]

------

  Release 0.7

  o FEATURE: Het-groups are now represented with bond orders.

  o FEATURE: Ligand Builder - working in conjunction with cprodrg.

  o FEATURE: RCrane [RNA builder]

  o FEATURE: Cootaneer [RNA builder]

  o FEATURE: PDBe Recent structure browser.

  o FEATURE: JLigand interface.

  o CHANGE: symmetry operator number are no longer zero indexed.  Add
    trans component to symmetry file names. [Steven Sheriff].

  o CHANGE: Dotted surfaces now are coloured by atom type and are at
    atomic radii rather than 1A.

  o CHANGE: map transformation no longer has symmetry overwrite
    problems [JED].
 
  o BUG-FIX: Fix missing C7 on DA -> DT mutation [Sabine Schneider].

  o BUG-FIX: TER records on base mutation [James Parker].

  o BUG-FIX: DNA in sequence view [Miguel Ortiz Lombardia].
 
  o BUG-FIX: Update Go To Atom dialog after water merging [Bob Nolte].

  o BUG-FIX: fix memory leak in fit-protein function [Ed Pozharski].

  o BUG-FIX: Improved "Place Helix Here".


------

  Release 0.6.2

  o FEATURE: PISA Interfaces can now be represented in Coot (requires
    pisa version 1.06 or later).

  o FEATURE: Regularize sphere function introduced.

  o FEATURE: --update-self to update pre-release binary from server.
